--- a/Assignment 3/RNN_Music_Generation.ipynb
+++ b/Assignment 3/RNN_Music_Generation.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "riVZCVK65QTH",
         "outputId": "1a4f3c58-8a95-4fd4-e43c-fac43dae44bb",
@@ -107,7 +107,7 @@
         "!pip install comet_ml > /dev/null 2>&1\n",
         "import comet_ml\n",
         "# TODO: ENTER YOUR API KEY HERE!! instructions above\n",
-        "COMET_API_KEY = \"\"\n",
+        "COMET_API_KEY = \"7zCqF4oMyHmG9HzKsy5VnKHl8\"\n",
         "\n",
         "# Import PyTorch and other relevant libraries\n",
         "import torch\n",
@@ -132,7 +132,7 @@
         "# Check that we are using a GPU, if not switch runtimes\n",
         "#   using Runtime > Change Runtime Type > GPU\n",
         "assert torch.cuda.is_available(), \"Please enable GPU from runtime settings\"\n",
-        "assert COMET_API_KEY != \"\", \"Please insert your Comet API Key\"\n",
+        "assert COMET_API_KEY != \"7zCqF4oMyHmG9HzKsy5VnKHl8\", \"Please insert your Comet API Key\"\n",
         "\n"
       ]
     },
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "P7dFnP5q3Jve",
         "outputId": "ced0d62e-fb14-4a75-b7a8-dd83a0619d59",
